# mcp-modular-architecture

./: .env.example  .gitignore  HARDCODED_VALUES_VERIFICATION.md  LICENSE  README.md  pyproject.toml  requirements.txt  run_server.py
config/: base.yaml  development.yaml  production.yaml  server.yaml
docs/: ACCESSIBILITY.md  PRD.md  TESTING.md  architecture.md  conf.py  cost_analysis.md  deployment.md  final_checklist.md  index.rst  metrics_dashboard.md  prompts.md  research_scope.md  screenshots.md
docs/adr/: ADR-001-five-stage-architecture.md  ADR-002-transport-abstraction.md  ADR-003-registry-pattern.md  ADR-004-sdk-mandatory-layer.md
docs/api/: core_config.rst  core_errors.rst  core_logging.rst  index.rst  mcp_prompts.rst  mcp_registries.rst  mcp_resources.rst  mcp_server.rst  mcp_tools.rst  sdk_client.rst  transport.rst
docs/diagrams/: c4_container.md  c4_context.md
docs/research/: README.md  architecture_comparison.md  architecture_evaluation.ipynb  cost_analysis.md
docs/screenshots/: 01-cli-list-tools.txt  02-test-batch-processor.txt  03-test-concurrent-fetcher.txt  04-all-tests.txt  05-coverage-report.txt  06-sdk-demo.txt
examples/: sdk_demo.py
examples/plugins/: DEVELOPMENT_GUIDE.md  README.md  plugin_demo.py  weather_plugin.py
src/: __init__.py
src/core/: __init__.py
src/core/config/: config_manager.py
src/core/errors/: error_handler.py  exceptions.py
src/core/logging/: logger.py
src/mcp/: __init__.py  prompt_registry.py  resource_registry.py  server.py  server_initialization.py  server_operations.py  server_registry.py  tool_registry.py
src/mcp/prompts/: __init__.py  base_prompt.py  code_review_prompt.py  summarize_prompt.py
src/mcp/resources/: __init__.py  base_resource.py  config_resource.py  status_resource.py
src/mcp/schemas/: tool_schemas.py
src/mcp/tools/: __init__.py  base_tool.py  batch_processor_tool.py  calculator_tool.py  concurrent_fetcher_tool.py  echo_tool.py
src/models/: base_model.py  resource.py
src/sdk/: __init__.py  mcp_client.py  mcp_client_operations.py
src/services/: resource_service.py
src/transport/: __init__.py  base_transport.py  stdio_transport.py  transport_handler.py  transport_message_handlers.py
src/ui/: __init__.py  cli.py  cli_commands.py
src/ui/commands/: __init__.py  base_command.py  prompt_commands.py  resource_commands.py  server_commands.py  (+1 more)
src/utils/: validators.py
tests/mcp/: test_prompt_registry.py  test_resource_registry.py  test_server.py  test_tool_registry.py
tests/models/: test_resource.py
tests/sdk/: __init__.py  test_mcp_client.py
tests/services/: test_resource_service.py
tests/transport/: __init__.py  test_base_transport.py  test_stdio_transport.py  test_transport_handler.py
tests/utils/: test_validators.py
(+12 files in other folders)
